# gcp-storage-emulator

./: .dockerignore  .editorconfig  .flake8  .gitignore  Dockerfile  LICENCE.md  README.md  TODO.md  build.sh  build.yml  globby.py  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yml  main.yml  nightly.yml  pr.yml  publish-to-dockerhub.yml  publish-to-test-pypi.yml  publist-to-dockerhub.yml  workflow.yml
.responses/get/: bucket_not_found.json  notfication_not_found.json  success.json
.responses/insert/: invalid_topic.json  missing_or_invalid_payload_format.json  missing_topic.json  success.json  topic_not_found.json
.responses/ls/: success.json
gcp_storage_emulator/: __main__.py  exceptions.py  server.py  settings.py  storage.py
gcp_storage_emulator/handlers/: buckets.py  objects.py
src/gcp_storage_emulator/: exceptions.py  pubsub.py  server.py  settings.py  storage.py
src/gcp_storage_emulator/handlers/: buckets.py  notifications.py  objects.py
tests/: test_main.py  test_server.py  test_storage.py  test_text.txt
